crd-bad-middleware-behavior-8088/resources/good_middleware.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: good-redirectregex
  annotations:
    kubernetes.io/ingress.class: traefik-ext
spec:
  redirectRegex:
    permanent: true
    regex: ^http://localhost/(.*)
    replacement: http://mydomain/${1}
