crd-bad-middleware-behavior-8088/resources/ingressroute.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: proxy

spec:
  entryPoints:
    - web
  routes:
    - match: Host(`whoami`)
      kind: Rule
      services:
        - name: whoami
          port: 80
      middlewares:
        - name: good-redirectregex
